--- a/views/info.html
+++ b/views/info.html
@@ -2,21 +2,21 @@
 <html>
   <header>
     <title>Party</title>
-    <link rel="stylesheet" type="text/css" href="style.css">
+    <link rel="stylesheet" type="text/css" href="/assets/style.css">
     <meta http-equiv="X-UA-Compatible" content="IE=edge;">
     <meta charset="UTF-8">
     <link href="https://unpkg.com/cirrus-ui" type="text/css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Nunito+Sans:200,300,400,600,700" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css" integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ" crossorigin="anonymous">
-    <link type="text/css" href="./cirrus.css">
+    <link type="text/css" href="/assets/cirrus.css">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0">
   </header>
   <body>
     <div class="hero fullscreen">
       <div class="row p-0">
         <div class="col-6 p-0">
-          <div class="h-100" style="background: url(./dwight.gif); background-size: cover; background-position: center; box-shadow: inset 5px 0px 9px 1px #00000017; min-height: 300px;"></div>
+          <div class="h-100" style="background: url(/assets/dwight.gif); background-size: cover; background-position: center; box-shadow: inset 5px 0px 9px 1px #00000017; min-height: 300px;"></div>
         </div>
         <div class="col-6 pt-20 level">
           <div class="u-text-left w-100">
@@ -32,6 +32,3 @@
     </div>
   </body>
 </html>
-<script src="https://code.jquery.com/jquery-3.6.0.slim.min.js" integrity="sha256-u7e5khyithlIdTpu22PHhENmPcRdFiHRjhAuHcs05RI=" crossorigin="anonymous"></script>
-<script src="https://unpkg.com/axios/dist/axios.min.js"></script>
-<script src="./index.js"></script>
