moving to paid github account repo

--- a/views/info.html
+++ b/views/info.html
@@ -16,7 +16,7 @@
     <div class="hero fullscreen">
       <div class="row p-0">
         <div class="col-6 p-0">
-          <div class="h-100" style="background: url(/assets/dwight.gif); background-size: cover; background-position: center; box-shadow: inset 5px 0px 9px 1px #00000017; min-height: 300px;"></div>
+          <div class="h-100" style="background: url(/assets/dwight.gif); background-size: cover; background-position: center; box-shadow: inset 5px 0px 9px 1px #00000017; height: 100vh;"></div>
         </div>
         <div class="col-6 pt-20 level">
           <div class="u-text-left w-100">
