--- a/views/login.html
+++ b/views/login.html
@@ -36,7 +36,7 @@
           </div>
         </div>
         <div class="col-6 p-0">
-          <div class="h-100" style="background: url(/assets/party.gif); background-size: cover; background-position: center; box-shadow: inset 5px 0px 9px 1px #00000017; min-height: 300px;"></div>
+          <div class="h-100" style="background: url(/assets/party.gif); background-size: cover; background-position: center; box-shadow: inset 5px 0px 9px 1px #00000017; min-height: 100vh;"></div>
         </div>
       </div>
     </div>
